--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+asgiref = "==3.5.2"
+django = "==4.1.1"
+django-filter = "==22.1"
+django-taggit = "==3.0.0"
+djangorestframework = "==3.14.0"
+pytz = "==2022.4"
+sqlparse = "==0.4.3"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
